[package]
name = "constrained_scheduling_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.4"
serde_with = { version = "1.14", features = ["chrono", "macros"] }